--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
 		"@sveltejs/adapter-auto": "^6.0.0",
 		"@sveltejs/kit": "^2.22.0",
 		"@sveltejs/vite-plugin-svelte": "^6.0.0",
+		"postcss": "^8.5.6",
+		"postcss-nesting": "^13.0.2",
 		"svelte": "^5.0.0",
+		"svelte-preprocess": "^6.0.3",
 		"vite": "^7.0.4"
 	}
 }
